--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                     campo. Disfruto explorando nuevas ideas y colaborando con equipos para crear soluciones que mejoren
                     la experiencia del usuario.</p>
             </div>
+            <div class="service-box">
+                <i class='bx bx-paint'></i>
+                <h3>Diseñador UI/UX</h3>
+                <p>Tengo conocimientos en la creación de experiencias digitales
+                    atractivas. Aunque mi experiencia es limitada, estoy comprometido en aprender y mejorar en este
+                    campo. Disfruto explorando nuevas ideas y colaborando con equipos para crear soluciones que mejoren
+                    la experiencia del usuario.</p>
+            </div>
 
 
             <div class="service-box">
