--- a/index.html
+++ b/index.html
@@ -92,19 +92,10 @@
                     campo. Disfruto explorando nuevas ideas y colaborando con equipos para crear soluciones que mejoren
                     la experiencia del usuario.</p>
             </div>
-            <div class="service-box">
-                <i class='bx bx-paint'></i>
-                <h3>Diseñador UI/UX</h3>
-                <p>Tengo conocimientos en la creación de experiencias digitales
-                    atractivas. Aunque mi experiencia es limitada, estoy comprometido en aprender y mejorar en este
-                    campo. Disfruto explorando nuevas ideas y colaborando con equipos para crear soluciones que mejoren
-                    la experiencia del usuario.</p>
-            </div>
-
 
             <div class="service-box">
                 <i class='bx bx-cog'></i>
-                <h3>Tecnico</h3>
+                <h3>Soporte Tecnico</h3>
                 <p>En mantenimiento de PC, me dedico a aprender y crecer , Aun no con experiencia
                     profesional, poseo habilidades en diagnóstico de problemas, instalación de software y hardware
                     básico, optimización de sistemas. Estoy comprometido en continuar aprendiendo y adquirir experiencia
@@ -118,13 +109,10 @@
         <h2 class="heading">Tecno<span>logias</span></h2>
         <div class="tecnol-container">
             <div class="tecnol-box">
-                <h3>Frontend</h3>
+                <h3>Aprendidas | Reforzando</h3>
                 <i class='bx bxl-html5' style='color:#ef7004'></i>
                 <i class='bx bxl-css3' style='color:#0b5fea'></i>
                 <i class='bx bxl-javascript' style='color:#ead40b'></i>
-            </div>
-            <div class="tecnol-box">
-                <h3>Backend</h3>
                 <i class='bx bxl-java' style='color:#ea0b0b'></i>
                 <i class='bx bxl-php' style='color:#1b0bea'></i>
                 <i class="bx bxl-android" style="color:#3DDC84;"></i>
