--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                 <h3>Aprendidas | Reforzando</h3>
                 <i class='bx bxl-html5' style='color:#ef7004'></i>
                 <i class='bx bxl-css3' style='color:#0b5fea'></i>
+                <i class='bx bxl-css3' style='color:#0b5fea'></i>
+                <i class='bx bxl-css3' style='color:#0b5fea'></i>
                 <i class='bx bxl-javascript' style='color:#ead40b'></i>
                 <i class='bx bxl-java' style='color:#ea0b0b'></i>
                 <i class='bx bxl-php' style='color:#1b0bea'></i>
