--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <div class="social-media">
                 <a href="https://www.facebook.com/bryan.a.espinoza.54?mibextid=ZbWKwL" target="_blank"><i
                         class='bx bxl-facebook'></i></a>
-                <a href="https://wa.link/1y320g" target="_blank"><i
-                        class='bx bxl-whatsapp'></i></a>
+                <a href="https://wa.link/1y320g" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.instagram.com/bryanalexander3288?igsh=N3FmcHZmaWMzcGVp" target="_blank"><i
                         class='bx bxl-instagram-alt'></i></a>
                 <a href="http://www.linkedin.com/in/bryan200315" target="_blank"><i class='bx bxl-linkedin'></i></a>
@@ -81,7 +80,7 @@
                 <p>Como desarrollador junior, tengo el conocimiento de desarrollo web para crear sitios atractivos y
                     funcionales. Utilizo tecnologías modernas y mejores prácticas para tiendas en
                     línea y aplicaciones web, estoy comprometido en aprender, crecer y ganar experiencia en este
-                    maravillo mundo de la programacion.</p>
+                    maravilloso mundo de la programacion.</p>
             </div>
 
             <div class="service-box">
@@ -96,7 +95,7 @@
             <div class="service-box">
                 <i class='bx bx-cog'></i>
                 <h3>Soporte Tecnico</h3>
-                <p>En mantenimiento de PC, me dedico a aprender y crecer , Aun no con experiencia
+                <p>En mantenimiento de PC, me dedico a aprender y crecer , Aun no cuento con experiencia
                     profesional, poseo habilidades en diagnóstico de problemas, instalación de software y hardware
                     básico, optimización de sistemas. Estoy comprometido en continuar aprendiendo y adquirir experiencia
                     práctica con equipos informáticos.
