--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         class='bx bxl-instagram-alt'></i></a>
                 <a href="http://www.linkedin.com/in/bryan200315" target="_blank"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="Bryan Cv dev.pdf" download="Bryan_Espinoza_CV" class="btn">Descargar CV</a>
+            <a href="CV Bryan Espinoza.pdf" download="Bryan_Espinoza_CV" class="btn">Descargar CV</a>
         </div>
         <div class="home-img">
             <img src="img/YO-removebg-preview.png" alt="">
