--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!!</span></h2>
+        <h2 class="heading">Contacta<span>me!!</span></h2>
 
         <form action="enviar_formulario.php" method="post">
             <div class="input-box">
